2008-10-30  Jeremy Cribb <jcribb@email.unc.edu>
	* .cvsignore added by Kris Ford on 2008-10-28
	* carreau_model_fit.m: explicity set upper and lower bounds.
	* meter_fit.m: added. performs fit for the Meter model (stress dependence).
	* meter_fun.m: added. fitting function for the Meter model (stress dependence).
	* cross_model_fit.m: fixed bug in fitting equation.
	* cross_model_fun.m: same.

2008-10-15  Jeremy Cribb <jcribb@email.unc.edu>
	- carreau_model_fit.m: fixed bug in fitting equation.
	- carreau_model_fun.m: same.

2008-09-10  Jeremy Cribb <jcribb@email.unc.edu>
	* carreau_model_fit.m: added.  performs fit for the Carreau-Yasuda model, a non-linear model for shear thinning/thickening in macroscale rheology.
	* carreau_model_fun.m: added.  contains fitting function for Carreau-Yasuda model.
	* cross_model_fit.m: adjusted options parameters for better fitting and removed log-space representation of function.
	* cross_model_fun.m: removed log-space representation of function.
	
2008-03-19  Jeremy Cribb <jcribb@email.unc.edu>
	* KV_step_fit.m: fixed typo in help comments.
	* cross_model_fit.m: added.  performs fit for the Cross Model, a non-linear model for shear thinning/thickening in rheology.  
	* cross_model_fun.m: added.  contains fitting function for Cross Model.
	* powerlaw_model_fit.m: added.  performs fit for powerlaw model, a non-linear model for shear thinning/thickening in rheology.
	* powerlaw_model_fun.m: added.  contains fitting function for powerlaw_model.
	

2007-08-30  Jeremy Cribb <jcribb@email.unc.edu>
	* stretched_exp_fit.m: added. performs fit for stretched exponential decay.
	* stretched_exp_fun.m: added. contains fitting function for stretched exponential function.

2007-03-19  Jeremy Cribb <jcribb@email.unc.edu>
	* jeffrey_step_fit.m: moved from parent folder.
	* jeffrey_step_fun.m: moved from parent folder.
	* KV_step_fit.m:  added.  performs fit for step response of a Kelvin-Voight fluid.